--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>obs-websocket-java</name>
     <groupId>net.twasi</groupId>
     <artifactId>obs-websocket-java</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4-SNAPSHOT-CLU</version>
 
     <description>Library to connect to the OBS WebSocket interface.</description>
     <url>https://github.com/Twasi/obs-websocket-java</url>
@@ -59,7 +59,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+<!--             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.5</version>
@@ -130,7 +130,7 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+ -->        </plugins>
     </build>
 
     <repositories>
@@ -178,6 +178,23 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        
+        <!-- logging log4j2 + slf4j -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.13.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.13.1</version>
+		</dependency>
     </dependencies>
 
 </project>
